# openWakeWord-Android

./: LICENSE  README.md  local.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/androidTest/java/com/example/wakeworddisplayimage/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: alexa_verifier.onnx  melspectrogram.onnx
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/wakeworddisplayimage/: AudioProcessor.kt  AudioRecorder.kt  Helper.kt  MainActivity.kt  MainViewModel.kt  OpenWakeWord.kt  openWakeWord.kt
app/src/main/java/com/example/wakeworddisplayimage/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/ml/: alexa.tflite  alexa2500015000100.tflite  alexa_20000_10000_1200.tflite  alexa_2500_5000_500.tflite  alexa_ca_25000_15000_100.tflite  alexa_v2.tflite  embedding_model.tflite  hola_ari.tflite  model_v10.tflite  model_v11.tflite  model_v9.tflite
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/wakeworddisplayimage/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
